[package]
name = "alt-create"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inquire = "0.7.4"
anyhow = "1.0"
serde_json = "1.0"
structopt = "0.3"
regex = "1.10.4"

[dependencies.chrono]
features = ["serde"]
version = "0.4"


[dependencies.serde]
features = ["derive"]
version = "1.0"

