[package]
name = "alt-create"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
colored = "2.1.0"
inquire = "0.7.4"
anyhow = "1.0"
serde_json = "1.0"
regex = "1.10.4"
markdown = "1.0.0-alpha.17"
tokio = { version = "1.38.1", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio", "sqlite"] }
clap = { version = "4.5.36", features = ["derive"] }
crossterm = "0.29.0"
rand = "0.9.1"
reqwest = { version = "0.12.12", features = ["json", "stream"] }
lazy_static = "1.5.0"
futures = "0.3.31"

[dependencies.chrono]
features = ["serde"]
version = "0.4"

[dependencies.serde]
features = ["derive"]
version = "1.0"

